@@ -2,7 +2,7 @@ Summary: Utilities for monitoring your system and processes on your system.
 Name: procps
 %define major_version 3
 %define minor_version 0
-%define revision 1
+%define revision 3
 %define version %{major_version}.%{minor_version}.%{revision}
 Version: %{version}
 Release: 1
